fix dark mode

--- a/src/components/timeline/timeline.scss
+++ b/src/components/timeline/timeline.scss
@@ -33,34 +33,34 @@
 
 .vertical-timeline::before {
   background: linear-gradient(
-    white 0%,
+    var(--white) 0%,
     var(--primary) 5%,
     var(--primary) 95%,
-    white 100%
+    var(--white) 100%
   ) !important;
   background: -webkit-gradient(
-    white 0%,
+    var(--white) 0%,
     var(--primary) 5%,
     var(--primary) 95%,
-    white 100%
+    var(--white) 100%
   );
   background: -webkit-linear-gradient(
-    white 0%,
+    var(--white) 0%,
     var(--primary) 5%,
     var(--primary) 95%,
-    white 100%
+    var(--white) 100%
   );
   background: -moz-linear-gradient(
-    white 0%,
+    var(--white) 0%,
     var(--primary) 5%,
     var(--primary) 95%,
-    white 100%
+    var(--white) 100%
   );
   background: -o-linear-gradient(
-    white 0%,
+    var(--white) 0%,
     var(--primary) 5%,
     var(--primary) 95%,
-    white 100%
+    var(--white) 100%
   );
 }
 
